<resources>
    <string name="app_name">Alert MeU Business</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">Login</string>
    <string name="register">Registration</string>
    <string name="l_email">Enter your email address</string>
    <string name="l_password">Enter Password</string>
    <string name="r_g_male">He</string>
    <string name="r_g_femont">She</string>
    <string name="r_first_name">* First Name</string>
    <string name="r_last_name">* Last Name</string>
    <string name="r_mobile_no">* Mobile Number</string>
    <string name="r_email">Email Address</string>
    <string name="r_password">* Password</string>
    <string name="uploaddata">Upload Data</string>
    <string name="paypal">Paypal Payment</string>
    <string name="showdata">Show Data On Map</string>
    <string name="generateqrcode">Advertisement</string>
    <string name="scanqrcode">Scan QR Code</string>
    <string name="paypal_button">Pay with PayPal</string>
    <string name="title_activity_n">NActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alert MeU</string>
    <string name="nav_header_subtitle">alertmeu@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">Alert MeU</string>
    <string name="loading">Loading...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="reg_title">Register your Business</string>
    <string name="reg_otp_title">You will receive SMS(OTP) on your Mobile Phone</string>
    <string name="reg_otp_mail">You will receive an (OTP) by Email</string>
    <string name="reg_mobile_no">Enter your mobile phone number</string>
    <string name="reg_with_email">Register with your Email Address</string>
    <string name="reg_with_mobile">Register with your Mobile Number</string>
    <string name="regDescOne">By registering you accept our</string>
    <string name="regDescTwo">Terms of Services and Privacy Policy</string>
    <string name="regReWarning">This phone number already exists.</string>
    <string name="regRMWarning">This email is already registered.\nPlease enter a different email address.</string>
    <string name="regOption">OR</string>
    <string name="regVryDesc">Enter the one time password (OTP) as shown below</string>
    <string name="regVryMailDesc">We have just sent you an email with a one-time password (OTP)</string>
    <string name="regCode">Enter the code here</string>
    <string name="regEnterPass">Enter password here.*</string>
    <string name="regEnterPassDec">The password must be a minimum of 6 characters long.\nYou can use letters and numbers and special characters - !#$*</string>
    <string name="regCrePass">Create a password*</string>
    <string name="regReEnterPass">Re-Enter password here..*</string>
    <string name="regReEnterPassDesc">Do Not share your password with anyone.</string>
    <string name="regReAS">Account Setup</string>
    <string name="regRenb">Name of your Business*</string>
    <string name="regRebn">Phone number of the business</string>
    <string name="regRebe">Email address of the business </string>
    <string name="regReba">Address:</string>
    <string name="regRebl">Company Logo,Signboard or Photo</string>
    <string name="regRebloc">Your Location*</string>
    <string name="regReblocname">Enter the name of your location</string>
    <string name="regReMbc">Select your business category</string>
    <string name="regReSbc">Select your sub-category</string>
    <string name="homeTilte">Advertise to Shoppers</string>
    <string name="homeTilteDesc">Shoppers near you</string>
    <string name="homeDesc1"></string>
    <string name="homeDesc2">Select the categories above and send advertisements to the shoppers interested in your offers.</string>
    <string name="setmyprec">My Business Categories </string>
    <string name="setmyplac">Change My Location</string>
    <string name="setmyhelp">Help</string>
    <string name="setmyaccount">My Account</string>
    <string name="setshare">Invite a Friend</string>
    <string name="heltcmp">Change my password</string>
    <string name="helOp4">Enter your old password here</string>
    <string name="helNp5">Enter your new Password here </string>
    <string name="helOp">Old password</string>
    <string name="helNp">New password</string>
    <string name="helpcmp">Change my password</string>
    <string name="helNpr">Re-enter password</string>
    <string name="helNpr5">Enter your re-enter password here </string>
    <string name="helpCen">Help Center</string>
    <string name="helpcmn">Change my number</string>
    <string name="helpcme">Change my Registered Email</string>
    <string name="helpfaq">Questions and Answers</string>
    <string name="helpcus">Contact us</string>
    <string name="helptpp">Terms and Privacy Policy</string>
    <string name="helplo">Log out</string>
    <string name="helpCan">Cancel</string>
    <string name="helpv">Version</string>
    <string name="helpb">Build</string>
    <string name="helts">Terms of Service</string>
    <string name="heltcmn">Change my phone number</string>
    <string name="helDesc1">Use Change Number to move your account info and settings from your current phone number to a new phone number.</string>
    <string name="helDesc2">To continue, you need to enter your old and new phone numbers in next screen.</string>
    <string name="helDesc3">Old Phone Number*</string>
    <string name="helDesc6">New Phone Number*</string>
    <string name="helDesc4">Enter your Old Phone number here*</string>
    <string name="helDesc5">Enter your New Phone number here*</string>
    <string name="termsdec">Welcome to Alert MeU website and online services of Alert MeU Inc. This page explains the terms by which you may use our online and/ or mobile services, web site, and software provided on or in connection with the service. </string>
    <string name="contactdec">Please read Questions and Answers first. If your questions are still not answered, describe the problem or issues, include screenshots, if available, and send it to us.
        \n\nThank you for using the App.
        \n\nDescribe your problem here:</string>
    <string name="regsend">Send</string>
    <string name="helpLog">You will be logged out of Alert MeU application. To access the application, please login again.</string>
    <string name="logDec1"></string>
    <string name="logSignInM">Login with Email</string>
    <string name="logSignInMn">Login with phone number</string>
    <string name="lognew">Are you new to Alert MeU Business?</string>
    <string name="logreg">Register</string>
    <string name="logpass">Enter your password here</string>
    <string name="logfpass">Forgot your password?</string>
    <string name="homeBtnPosAds">Post Advertisement</string>
    <string name="homePosActAds">Active</string>
    <string name="homePosInActAds">Inactive</string>
    <string name="homePosAddAds">Create</string>
    <string name="homePosActTitle">My Advertisements</string>
    <string name="homePosAddTitle">Post an Ad</string>
    <string name="homeAddAdsTitle">Create a Title*</string>
    <string name="homeAddAdsSdesc">Write Description </string>
    <string name="homeAddAdsLdesc">Limitations and Restrictions, if any</string>
    <string name="homeTakePic">Take a picture</string>
    <string name="homeTakeLPic">Select a picture from library </string>
    <string name="homeTakeCPic">Cancel</string>
    <string name="homeGenrateQRcode"> Generate QR Code</string>
    <string name="homeChangeArea"> Custom Area</string>
    <string name="homeuploadData"> Submit data</string>
    <string name="stime"> Select Start time*</string>
    <string name="runadd"> Run Ad for *</string>
    <string name="estcost"> Estimated Cost:</string>
    <string name="next"> Next</string>
    <string name="postedTitle"> Advertisement Posted</string>
    <string name="postedCong"> Congratulations!</string>
    <string name="postedDes">Your Advertisement is posted.</string>
    <string name="postedBarCode">Your Ad Code is:</string>
    <string name="faqD"> Still did not find answers to your questions?</string>
    <string name="regReWarning1">This phone number not valid.</string>
    <string name="myaccbal">Available Balance</string>
    <string name="myaddmoney">Add Money</string>
    <string name="Historyofall">My Advertisements</string>
    <string name="action_all">All</string>
    <string name="action_inactive">Not Started</string>
    <string name="action_saved">Saved</string>
    <string name="action_expired">Expired</string>
    <string name="action_deactivated">Deactivated</string>
    <string name="action_active">Active</string>
    <string name="HistoryTall">Transactions</string>
    <string name="Transofall">Transactions</string>
    <string name="action_funds_added">Funds Added</string>
    <string name="action_advertisements">Advertisements</string>
    <string name="action_refund">Refund</string>
    <string name="click">Please select at least one category</string>
    <string name="regReferralDesc">Please enter valid Referral Code</string>
    <string name="regAllReferralDesc">Another business or user registered on this device with a referral code. Please use a different device to use referral code.</string>
    <string name="regReferralDescS">Referral code applied. Thank you!</string>
    <string name="regReEnterReferral">Referral Code</string>
    <string name="xcreateac">Create Account</string>
    <string name="xtitle">Title</string>
    <string name="xdesc">Description:</string>
    <string name="xlimi">Limitation:</string>
    <string name="xvali">Validity:</string>
    <string name="xcost">Cost</string>
    <string name="xcm">Current Amount</string>
    <string name="xrm">Remaining Amount</string>
    <string name="xad">Add</string>
    <string name="xadi">Edit</string>
    <string name="xsave">Save</string>
    <string name="xpublish">Publish</string>
    <string name="xaf">add funds</string>
    <string name="xloc">Location</string>
    <string name="xba">Balance Amount</string>
    <string name="xnap">No Ads have been published.</string>
    <string name="xnca">Create your advertisement now!</string>
    <string name="xah">Ad History</string>
    <string name="xrec">Recent</string>
    <string name="xsce">Scheduled</string>
    <string name="xnbc">No business categories selected.</string>
    <string name="xmp">My Profile</string>
    <string name="xoer">Old Registered Email *</string>
    <string name="xne">New Email *</string>
    <string name="xneh">Enter your NEW Email here*</string>
    <string name="xnsho">\nPlease add screenshot or photo of the problem below.</string>
    <string name="xbrm">Registered Mobile Number</string>
    <string name="xbrea">Registered Email Id</string>
    <string name="xaln">Alternate phone number</string>
    <string name="xalm">Alternate Email address</string>
    <string name="xsub">Submit</string>
    <string name="xsearch">Search...</string>
    <string name="xclose">Close</string>
    <string name="xrcp">If you have a referral code, please enter it below.</string>
    <string name="xappy">Apply</string>
</resources>