<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.RegisterNGetStartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ff0000"
            android:gravity="center|center_horizontal"
            android:paddingLeft="@dimen/spacing_medium"
            android:text="@string/reg_title"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|center_horizontal"
            android:paddingLeft="@dimen/spacing_medium"
            android:visibility="gone"
            android:text="@string/reg_otp_title"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Scrollable Item below header and above footer -->
    <ScrollView
        android:id="@+id/sv1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginRight="5dp"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/layoutHide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="2dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/u_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:editable="false"
                    android:gravity="center"
                    android:hint="@string/reg_mobile_no"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColorHint="@drawable/selector"/>

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_xxxlarge"
                    android:layout_marginRight="@dimen/spacing_xxxlarge"
                    android:background="@null"
                    app:ccp_autoDetectCountry="true" />

                <TextView
                    android:id="@+id/warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/regReWarning"
                    android:textColor="#ff0000"
                    android:visibility="gone" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:gravity="center"
                    android:text="@string/xrcp"
                    android:textColor="#4AA7F1" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <EditText
                        android:id="@+id/uReferral"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:editable="false"
                        android:gravity="center"
                        android:hint="@string/regReEnterReferral"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textColorHint="@drawable/selector" />
                    <Button
                        android:id="@+id/btnApply"
                        android:layout_width="0dp"
                        android:layout_weight=".3"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:text="@string/xappy"
                        android:visibility="gone"
                        android:textAllCaps="false"
                        android:textColor="@color/textcolor"
                        android:textSize="16sp" />
                </LinearLayout>
                <TextView
                    android:id="@+id/failCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:gravity="center"
                    android:textColor="#FF0000"
                    android:visibility="gone"
                    android:text="@string/regReferralDesc" />
                <TextView
                    android:id="@+id/usedCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:gravity="center"
                    android:textColor="#FF0000"
                    android:visibility="gone"
                    android:text="@string/regAllReferralDesc" />
                <TextView
                    android:id="@+id/successCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:gravity="center"
                    android:textColor="#4AA7F1"
                    android:visibility="gone"
                    android:text="@string/regReferralDescS" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/regOption" />

            <LinearLayout
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/textcolor"
                    android:src="@drawable/mail" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:gravity="center"
                    android:text="@string/reg_with_email"
                    android:textColor="#FF0000" />
            </LinearLayout>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/next"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textColor="@color/textcolor"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/regDescOne" />

            <TextView
                android:id="@+id/tnc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/regDescTwo"
                android:textColor="#4AA7F1"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>




